--- a/error-page.html
+++ b/error-page.html
@@ -101,7 +101,7 @@
                                         <li><a href="error-page.html">404 Error</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                               <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
