--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li ><a href="organizers.html">Organizers</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                               <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
