--- a/speakers.html
+++ b/speakers.html
@@ -107,7 +107,7 @@
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                 <li ><a href="organizers.html">Organizers</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                               <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
