--- a/ssic2019.html
+++ b/ssic2019.html
@@ -108,7 +108,7 @@
                                 </li>
                                 <li ><a href="speakers.html">Speakers</a></li>
                                 <li ><a href="organizers.html">Organizers</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                               <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
