--- a/ssic2019.html
+++ b/ssic2019.html
@@ -499,6 +499,7 @@
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="speakers.html">Speakers</a></li>
                                         <li><a href="organize.html">Organizers</a></li>
+                                        <li><a href="schedule.html">Schedule</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
