--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="auto-container">
             <div class="content-box">
                 <span class="title">3<sup style="text-transform: lowercase">rd</sup> International Conference on</span>
-                <h2> Smart Systems<br/>And Intelligent <br/>Computing</h2>
+                <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
                 <span class="title">22 - 23 January, 2021</span>
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
