--- a/index.html
+++ b/index.html
@@ -198,20 +198,20 @@
                 <section class="gallery-section" style="padding-top: 10px;padding-bottom: 10px;">
                     <div class="auto-container">
                         <div class="sec-title text-center">
-                            <span class="title">Partners</span>
-                            <h2>Joint Organizing Partners</h2>
+                            <!-- <span class="title">Partners</span> -->
+                            <h4>Joint Organizing Partners</h4>
                         </div>
 
                         <div class="row">
                             <!-- Gallery Item -->
                             <div class="gallery-item  col-md-6 col-sm-12 wow fadeIn">
                                 <div class="image-box">
-                                    <figure class="image"><img src="images/speakers/logo-clg.jpg" alt=""></figure>
+                                    <figure class="image"><img src="images/speakers/logo-clg.jpg" style="height: 80px;width: 250px;" alt=""></figure>
                                 </div>
                             </div>
                             <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
                                 <div class="image-box">
-                                    <figure class="image"><img src="images/uos.png" alt=""></figure>
+                                    <figure class="image"><img src="images/uos.png" style="height: 80px;width: 250px;" alt=""></figure>
                                 </div>
                             </div>
 
@@ -222,18 +222,18 @@
                 </section>
             </div>
             <div class="col-md-6 col-sm-12 wow fadeIn">
-                <section class="gallery-section" style="padding-top: 10px; padding-bottom: 10px;">
+                <section class="gallery-section" style="padding-top: 0px; padding-bottom: 10px;">
                     <div class="auto-container">
                         <div class="sec-title text-center">
-                            <span class="title">Partners</span>
-                            <h2>Technical Partners</h2>
+                            <!-- <span class="title">Partners</span> -->
+                            <h4>Technical Partners</h4>
                         </div>
 
                         <div class="row">
                             <!-- Gallery Item -->
                             <div class="gallery-item offset-md-4 col-md-4 col-sm-12 wow fadeIn" id="eff" data-wow-delay="800ms">
                                 <div class="image-box eyy" style="width:250px;">
-                                    <figure class="image" ><img src="images/eff.png" style="height: 219px;width: 250px;" alt=""></figure>
+                                    <figure class="image" ><img src="images/eff.png" style="height: 100px;width: 250px;" alt=""></figure>
                                 </div>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="800ms">
