--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -64,6 +64,7 @@
                                         <li><a href="ssic2019.html">SSIC 2019</a></li>
                                         <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
+                                        <li><a href="about-us.html">About Us</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="papers.html">Call For</a>
