--- a/papers.html
+++ b/papers.html
@@ -127,7 +127,7 @@
                                         <li><a href="coming-soon.html">Registration</a></li>
                                         <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
-                                        <li><a href="evisa.html">E Visa</a></li>
+                                        <li><a href="coming-soon.html">E Visa</a></li>
                                     </ul>
                                 </li>
                             </ul>
