--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
                                <li class="dropdown"><a href="schedule.html">Author Info.</a>
-                                <ul style="width: 300px;">
-                                    <li><a href="coming-soon.html">Registration</a></li>
-                                    <li><a href="coming-soon.html">Banking</a></li>
-                                    <li><a href="coming-soon.html">Travel and Accommodation</a></li>
-                                </ul>
-                               </li>
+                                    <ul style="width: 300px;">
+                                        <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="coming-soon.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Travel and Accommodation</a></li>
+                                        <li><a href="coming-soon.html">E Visa</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </nav>
