--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             #logo
             {
                 max-width: 30%;
-                height: auto !important;
+                height: auto !imporTechnical Partnerstant;
             }
         }
 
@@ -194,22 +194,20 @@
                 <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;</a></figure>
                 <div>All the accepted and presented papers will be published in following 
                     <ol>
-                        <li>1.&nbsp;<a href="https://www.springer.com/series/8767">Smart Innovation, Systems and Technologies</a></li>
-                        <li>2.&nbsp;<a href="https://www.springer.com/series/15179">Lecture Notes in Networks and Systems</a></li>
+                        <li>1.&nbsp;<a href="https://www.springer.com/series/8767" target="__blank">Smart Innovation, Systems and Technologies</a></li>
+                        <li>2.&nbsp;<a href="https://www.springer.com/series/15179" target="__blank">Lecture Notes in Networks and Systems</a></li>
                     </ol>
                 </div>
                 <br><br>
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
                 <div>The few accepted high quality or extended papers will be recommended for possible<br>publication in Special Issues of following journals:
                     <ol>
-                        <li>1.&nbsp;Machine and Deep learning based pattern recognition and computer vision<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamopen.com/TOTJ/home/">The Open Transportation Journal</a></li>
-                        <li>2.&nbsp;Recent Advancements in Machine Learning Based Medical Imaging Applications<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamscience.com/journals/current-medical-imaging/">Current Medical Imaging</a></li>
-                        <li>3.&nbsp;Special Issue on Computational Intelligence and Cognitive Systems in the<a href="https://benthamscience.com/journals/recent-advances-in-computer-science-and-communications/"> Recent<br>&nbsp;&nbsp;&nbsp;Advances in Computer Science and Communications</a></li>
-                        <li>4.&nbsp;<a href="https://www.springer.com/journal/11042">Multimedia Tools and Applications</a>, Springer Journal, Indexed by SCI IF = 2.101.</li>
-                        <li>5.&nbsp;<a href="https://www.igi-global.com/journal/international-journal-information-system-modeling/1157">International Journal of Information System Modeling and Design (IJISMD)</a>, IGI<br>&nbsp;&nbsp;&nbsp;Global Journal, Indexed by Scopus and ESCI.</li>
-                        <li>6.&nbsp;<a href="http://www.ijpe-online.com/">International Journal of Performability Engineering (IJPE),</a>, Indexed by Scopus.</li>
-
-                    
+                        <li>1.&nbsp;Machine and Deep learning based pattern recognition and computer vision<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamopen.com/TOTJ/home/" target="__blank">The Open Transportation Journal</a></li>
+                        <li>2.&nbsp;Recent Advancements in Machine Learning Based Medical Imaging Applications<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamscience.com/journals/current-medical-imaging/" target="__blank">Current Medical Imaging</a></li>
+                        <li>3.&nbsp;Special Issue on Computational Intelligence and Cognitive Systems in the<a href="https://benthamscience.com/journals/recent-advances-in-computer-science-and-communications/" target="__blank"> Recent<br>&nbsp;&nbsp;&nbsp;Advances in Computer Science and Communications</a></li>
+                        <li>4.&nbsp;<a href="https://www.springer.com/journal/11042" target="__blank">Multimedia Tools and Applications</a>, Springer Journal, Indexed by SCI IF = 2.101.</li>
+                        <li>5.&nbsp;<a href="https://www.igi-global.com/journal/international-journal-information-system-modeling/1157" target="__blank">International Journal of Information System Modeling and Design (IJISMD)</a>, IGI<br>&nbsp;&nbsp;&nbsp;Global Journal, Indexed by Scopus and ESCI.</li>
+                        <li>6.&nbsp;<a href="http://www.ijpe-online.com/" target="__blank">International Journal of Performability Engineering (IJPE),</a>, Indexed by Scopus.</li>
                         </ol>
                 </div>
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
@@ -276,11 +274,50 @@
                                 </div>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeIn" data-wow-delay="800ms">
-            <!--                    <div class="image-box">-->
-            <!--                        <figure class="image"><img src="images/speakers/partners1.jpeg" alt=""></figure>-->
-            <!--                        <div class="overlay-box"><a href="images/speakers/partners1.jpeg" class="lightbox-image" data-fancybox='gallery'><span class="icon fa fa-expand-arrows-alt"></span></a></div>-->
-            <!--                    </div>-->
+                           </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 wow fadeIn">
+                <section class="gallery-section" style="padding-top: 10px;padding-bottom: 10px;">
+                    <div class="auto-container">
+                        <div class="sec-title text-center">
+                            <!-- <span class="title">Partners</span> -->
+                            <h4>Publication Partners</h4>
+                        </div>
+
+                        <div class="row">
+                            <!-- Gallery Item -->
+                            <div class="gallery-item  col-md-6 col-sm-12 wow fadeIn">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/springer.png" style="height: 80px;width: 150px;" alt=""></figure>
+                                </div>
                             </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><a href="https://www.springer.com/series/8767" target="__blank"><img src="images/speakers/book1.jpg" style="height: 150px;width: 150px;" alt=""></a></figure>
+                                </div>
+                            </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><a href="https://www.springer.com/series/15179" target="__blank"><img src="images/speakers/book2.jpg" style="height: 150px;width: 150px;" alt=""></a></figure>
+                                </div>
+                            </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/logo4.png" style="height: 100px;width: 200px;" alt=""></figure>
+                                </div>
+                            </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/logo5.jpg" style="height: 150px;width: 200px;" alt=""></figure>
+                                </div>
+                            </div>
+                            <!-- Gallery Item -->
+
                         </div>
                     </div>
                 </section>
