--- a/organizers.html
+++ b/organizers.html
@@ -203,7 +203,7 @@
                             <span class="designation">President, Manipal University <Jaipur></Jaipur></span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHCFvYlO5bu_Q/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=OIzbbLx2YYVLls8w23M7mWzn5dtD27qQrHsY3VaFdXs" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHCFvYlO5bu_Q/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=4TFLslZDKxHoWoaNWSRIpRgvUjZRT-lOCWdhKAFXSp4" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -279,7 +279,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/muj/about-us/board-of-management/muj_registrar/_jcr_content/contentpanel/type3Parsys/manipaltextimage/image.img.jpg/1546880415107.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Ravi%20Shankar%20Kamath1.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -315,7 +315,7 @@
                             <span class="designation">Iowa State University, USA</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQFXNe3lvSOgZg/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=KIPZwvVVpG_Fpn5LuRKqgoBwBUpUNCPy0E-t97ebK28" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQFXNe3lvSOgZg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=Qd8BFlMftWMBoWV-fUnsB3fGVyA4kBdAVqkCG5lsw0Y" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -371,7 +371,7 @@
                             <span class="designation">University of Technology Sydney Australia</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQH8qVnwffsHDA/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=NACDnj46O9kHYdTza5esVu5tQXRklrmcl9Z_oPXN2_0" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQH8qVnwffsHDA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=8Edt9mjbH9NIXZuWhQX-I998bimvIS1kbXZmgKZ8quw" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -389,7 +389,7 @@
                             <span class="designation">Deakin University Australia</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGWF0p6KYAtVg/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=70FdKwuHe8yPjq8r5Y5J4qKh5y48jcge5sbfLb8S7-M" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGWF0p6KYAtVg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=yQ-Q4H9DtcIcQbrK74nrKrf2p8P8nJbmghAR8kloKX4" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -425,7 +425,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQGS0JVLkH6ODg/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=ctp3zG6Ndno-XRSATUngUwHi_9c5YUMqhTr1YDW0I6U" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQGS0JVLkH6ODg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=2qxQwRWbmnzJrdqjFVS6wJk2c9sSHXiLeuS6URMHb28" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -462,7 +462,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQGawwH5UvSBzA/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=GOoNmeUp6BKI5GEK3H3DR9jBual9MmFYsxa2cDToJmg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQGawwH5UvSBzA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=wKOFSdvN8aePY-tbrEm6mFIZ3yOg23F2VONsMz0j4k8" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -480,7 +480,7 @@
                             <span class="designation">MNIT Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQHug7_fKXhtkA/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=0I6oS7sNVHCrYQtcQ8FtWYksiqHC7nfnZ4klZA4qDnE" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQHug7_fKXhtkA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=_CbUbJz1Hz-mIEhtxaMsHxKxpR5aD7jb1kkoLSSayic" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -517,7 +517,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEso2JWMIB-IQ/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=Kj8GCswmMYDnlQmlJcgu9QlN1MI1QiwGtYA3Gevp_ts" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEso2JWMIB-IQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=82Dsf9XWed8sIcyOoxoTdepni-Ddnv_OdkA5ety5H3U" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -608,7 +608,7 @@
                             <span class="designation">Head of Department of Mechanical Engineering at South Valley University-Qena</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEirKqwO90j5w/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=TeM_YQv-X6-70TskMy_fbkRqfBho3R0uTknVp2VBrUs" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEirKqwO90j5w/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=fLXHBQMfZRDGrKaeYdPMVwe1NZ-yv_7W9sFm4eu5lc8" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -627,7 +627,7 @@
                             <span class="designation">Senior Lecturer, Computer Information Systems at University of Malta</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEKWJyGdBt4Cw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=fPsln0rhcs1ZFhRTd0S40NzIWFkxvAcyJ4KccvT-s6c" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEKWJyGdBt4Cw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=wckMFFTrYbfsUaSLRH0J6OkyHxAEsNIBKsyihaDBSxI" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -736,7 +736,7 @@
                             <span class="designation">Accenture Innovations</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=6Lg29hOZuRZsGX8IHWToti2iOyTy_uOQMsPCkOj-I9E" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=w68q-PJ5kic3WjG_QLgqeRs68aNFkwpMag_fD0MxyDw" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -754,7 +754,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQHTTmObtz00nw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=6yQZ5QNvz6rdL5sB4EHuD-vIRORMJTWO7RgiWF93IGI" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQHTTmObtz00nw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=L8JaigB_AEpQSlR9ywo9hWU71vdTy0jrO76emhwEGDo" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -772,7 +772,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWJB6duhhCYQ/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=o69i8YpWYIgOvpBZxjBoy9Dmku6hLinY9uNf3_nTBWA" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWJB6duhhCYQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=7NTWc4ZqmN5ZNwrFoz-5DxK2SoLwdfIU2UqsBYXnJzE" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -790,7 +790,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGvShMmflGdkQ/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=yLJeWmhssXS3pFUiO0RBqdcmEK12hGD38UkDCPUlj1w" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGvShMmflGdkQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=6IDPK8zsjWhygu5c5sYjRKxQqNgeWGTuas16Y5d_cqc" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -808,7 +808,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEl2JZ4bEciCw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=qW076G9PZoPXr407Ui8BYQqQ77EzwhiEmG8LHWUZp94" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEl2JZ4bEciCw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=8lvjVpL8p4SGDV8VuJYEj82TbelDTRr5HqQCWIuMB8o" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
